--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -9,7 +9,7 @@
                 {% csrf_token %}
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4">Log In</legend>
-                    {{ form|crispy }}
+                    {{ crispy login }}
                 </fieldset>
                 <div class="form-group">
                     <button class="btn btn-outline-info" type="submit">
